--- a/concepts/metric/user-satisfaction.mdx
+++ b/concepts/metric/user-satisfaction.mdx
@@ -13,7 +13,8 @@ This metric is particularly useful for monitoring the overall user experience, i
 
 To compute the `user_satisfaction` metric, the following parameter is required:
 
-- **`conversation_turns`**: The complete history of user inputs and chatbot responses.
+- **`input`**: The user messages sent to the chatbot.
+- **`actual_output`**: The chatbot's corresponding responses.
 
 The evaluation considers the *entire conversation* rather than individual responses in isolation.
 
