Add strategies parameter to test creation example
Updated the test creation example to include the 'strategies' parameter with a value of ['written'] for improved clarity on available options.

--- a/sdk/api/test/create.mdx
+++ b/sdk/api/test/create.mdx
@@ -49,7 +49,8 @@ test = galtea.tests.create(
     product_id="YOUR_PRODUCT_ID",
     custom_user_focus="A medical professional specialized in dementia with more than 15 years in the field",
     language="english",
-    max_test_cases=25
+    max_test_cases=25,
+    strategies=["written"]
 )
 ```
 
