Add 2025-11-17 changelog entry and update notes
Introduced new changelog for 2025-11-17 with updates on simplified metric creation using partial prompts, binarized metric scores, improved quality test file validation, enhanced LLM performance, and more robust email validation. Updated changelog.mdx to include the new entry and revised changelog_prompt.md to reflect the latest changes and upcoming features.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -28,7 +28,9 @@ import Changelog_2025_10_15 from "/snippets/changelog/2025-10-15.mdx";
 import Changelog_2025_10_27 from "/snippets/changelog/2025-10-27.mdx";
 import Changelog_2025_11_03 from "/snippets/changelog/2025-11-03.mdx";
 import Changelog_2025_11_10 from "/snippets/changelog/2025-11-10.mdx";
+import Changelog_2025_11_17 from "/snippets/changelog/2025-11-17.mdx";
 
+<Changelog_2025_11_17 />
 <Changelog_2025_11_10 />
 <Changelog_2025_11_03 />
 <Changelog_2025_10_27 />
