Add 2025-11-24 changelog entry and update notes
Introduced new changelog snippets for 2025-11-24 in both HTML and MDX formats. Updated changelog.mdx to include the latest entry and revised changelog_prompt.md to reflect new features: granular credit consumption, improved platform robustness and security, and enhanced SDK file validation.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -29,7 +29,9 @@ import Changelog_2025_10_27 from "/snippets/changelog/2025-10-27.mdx";
 import Changelog_2025_11_03 from "/snippets/changelog/2025-11-03.mdx";
 import Changelog_2025_11_10 from "/snippets/changelog/2025-11-10.mdx";
 import Changelog_2025_11_17 from "/snippets/changelog/2025-11-17.mdx";
+import Changelog_2025_11_24 from "/snippets/changelog/2025-11-24.mdx";
 
+<Changelog_2025_11_24 />
 <Changelog_2025_11_17 />
 <Changelog_2025_11_10 />
 <Changelog_2025_11_03 />
