--- a/sdk/tutorials/how-to-create-your-llm-as-a-judge-prompt.mdx
+++ b/sdk/tutorials/how-to-create-your-llm-as-a-judge-prompt.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'How to create your LLM-as-a-judge prompt?'
 description: "A comprehensive framework for constructing LLM-as-a-judge prompts through the specification of objective evaluation criteria and the definition of unambiguous scoring rubrics with precise thresholds."
-icon: "comments"
+icon: "pen"
 ---
 
 You can use galtea to [Evaluate with Custom Metrics](/sdk/tutorials/create-evaluation-with-custom-scores) and tailor your evaluation with a high degree of flexibility. However, this raises an important question: how do you translate the idea you want to evaluate into an effective, usable prompt?
