--- a/sdk/tutorials/how-to-create-your-llm-as-a-judge-prompt.mdx
+++ b/sdk/tutorials/how-to-create-your-llm-as-a-judge-prompt.mdx
@@ -74,8 +74,8 @@ For each [unit of analysis], verify:
 
 **Scoring Rubric:**
 
-- **Score [X]:** [Clear threshold with specific conditions]
-- **Score [Y]:** [Clear threshold with specific failure modes/edge cases]
+- **Score 1:** [Clear threshold for success, e.g., "All evaluation criteria are met."]
+- **Score 0:** [Clear threshold for failure, e.g., "One or more evaluation criteria are not met."]
 ```
 
 <Note>
@@ -117,8 +117,8 @@ metric = galtea.metrics.create(
 
     **Scoring Rubric:**
 
-    - **Score [X]:** [Clear threshold with specific conditions]
-    - **Score [Y]:** [Clear threshold with specific failure modes/edge cases]
+    - **Score 1:** [Clear threshold for success, e.g., "All evaluation criteria are met."]
+    - **Score 0:** [Clear threshold for failure, e.g., "One or more evaluation criteria are not met."]
     """,
     evaluator_model_name="GPT-4o",
     evaluation_params=["input", "actual_output"],
