Revise LLM judge prompt tutorial for clarity
Updated the tutorial to improve clarity and practicality, including revised title and description, clearer explanations of evaluation criteria and scoring rubrics, and enhanced example structures. Added notes and info boxes to highlight key concepts and common pitfalls, and provided a more actionable template and SDK implementation example.

--- a/sdk/tutorials/how-to-create-your-llm-as-a-judge-prompt.mdx
+++ b/sdk/tutorials/how-to-create-your-llm-as-a-judge-prompt.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'How to create your LLM-as-a-judge prompt?'
-description: "A comprehensive framework for constructing LLM-as-a-judge prompts through the specification of objective evaluation criteria and the definition of unambiguous scoring rubrics with precise thresholds."
+title: 'How to create your judge prompt?'
+description: "A practical guide for writing LLM-as-a-judge prompts: define objective evaluation criteria, unambiguous scoring rubrics, and machine-friendly outputs."
 icon: "pen"
 ---
 
-You can use Galtea to [Evaluate with Custom Metrics](/sdk/tutorials/create-evaluation-with-custom-scores) and tailor your evaluation with a high degree of flexibility. However, this raises an important question: how do you translate the idea you want to evaluate into an effective, usable prompt?
+You can use Galtea to [Evaluate with Custom Metrics](/sdk/tutorials/create-evaluation-with-custom-scores) and tailor your evaluation with full flexibility. However, this can be highly complex or even impossible in some cases. In this guide we will explain how to translate the idea you want to evaluate into an effective, usable prompt so an LLM can do the judging.
 
 ## Key Components of a Judge Prompt
 
@@ -12,24 +12,23 @@ You can use Galtea to [Evaluate with Custom Metrics](/sdk/tutorials/create-evalu
 
 Clearly state what the evaluator is assessing:
 
+*Example Structure:*
 ```
-**Role:** You are evaluating the _accuracy_ of the _ACTUAL_OUTPUT_.
+**Role:** You are evaluating the _thing to evaluate_ of the _ACTUAL_OUTPUT_.
+```
 
 ### 2. **Evaluation Criteria (Essential)**
 
-
-**What are Evaluation Criteria?**
-
-Evaluation criteria are the clear rules or checkpoints you want the judge (LLM or human) to use when reviewing an output. They help make your evaluation process fair, repeatable, and easy to understand.
+Evaluation criteria are the clear rules or checkpoints you want the judge to use when reviewing an output. They help make your evaluation process fair, repeatable, and easy to understand.
 
 **Recommendations:**
 - **Be specific:** Do not use vague terms like "good quality." Instead, explain exactly what quality means for your use case.
-- **Break it down (itemization):** Breaking down your criteria into separate, clearly defined points makes them easier to check, score, and understand. Each criterion should focus on one thing at a time.
+- **Break it down (itemization):** Break down your criteria into separate, clearly defined points. Make them easier to check, score, and understand. Each criterion should focus on one thing at a time.
 - **Use objective signals:** Look for things you can see or measure, not just opinions or feelings.
 - **Give examples:** Show what a good answer looks like, and what a bad answer looks like, for each criterion.
-- **Number your criteria:** This makes them easier to reference and ensures you don't miss anything important.
+- **Number your criteria:** This makes them easier to reference and ensures anything important is missed.
 
-**Structure:**
+*Example Structure:*
 ```
 For each [unit of analysis]:
 1. Check that [specific condition A]
@@ -39,19 +38,25 @@ For each [unit of analysis]:
 
 ### 3. **Scoring Rubric (Essential)**
 
-The scoring rubric is how you decide what score to give for each output. It sets the rules for what counts as a pass or fail, and helps make your evaluation fair and consistent. Here are the main things to keep in mind:
+The scoring rubric is how you decide what score to give for each output. It sets the rules for what counts as a pass or fail, and helps make your evaluation fair and consistent.
 
-**A. Define clear thresholds.** Binary (0/1): Specify exactly what counts as a pass or a fail. Make your scoring rules easy to understand and apply.
+Here are the main things to keep in mind:
 
-**B. All-or-nothing logic (recommended for direct system validation):** Assign a passing score only when *every* instruction or criterion is fully satisfied. In other words, if all requirements are met, score 1; if any requirement is not met, score 0.
+**A. Define clear thresholds.** Make your scoring rules easy to understand and apply. For example, if using binary scoring (either a 0 or a 1), specify exactly what counts as a pass or a fail.
 
-**C. Cover edge cases:** Think about what happens if criteria conflict, if data is missing, or if something is unclear. Make sure your rubric explains how to handle these situations.
+**B. Cover edge cases:** Think about what happens if criteria conflict, if data is missing, or if something is unclear. Make sure your rubric explains how to handle these situations.
 
-**Structure for Binary:**
+<Info>
+**All-or-nothing logic**: recommended for direct system validation. Use this when you want a strict pass/fail: score 1 only when *every* requirement is satisfied; otherwise score 0.
+</Info>
+
+*Example Structure for Binary:*
 ```
 - Score 1: The ACTUAL_OUTPUT meets all the evaluation criteria you listed above. For example, it is accurate, complete, and follows all instructions.
 - Score 0: The ACTUAL_OUTPUT fails one or more of the evaluation criteria. For example, it is missing key information, contains errors, or does not follow a specific instructions.
 ```
+
+You can also use graded rubrics (for example, 0-2 or 0-5). When using graded rubrics, define each numeric level explicitly and include a short example for each level so the judge behaves consistently.
 
 ## Common Pitfalls to Avoid
 
@@ -60,6 +65,10 @@ The scoring rubric is how you decide what score to give for each output. It sets
 3. **Missing edge cases:** Not specifying what happens with partial matches or ambiguous data
 4. **Subjective language:** "Natural" or "appropriate" without defining what that means
 5. **Overlapping criteria:** Multiple criteria testing the same thing differently
+
+<Note>
+  The key is: If you can't program it as a rule-based system, your criteria aren't specific enough for an LLM judge either.
+</Note>
 
 ## Template
 
@@ -84,11 +93,11 @@ For each [unit of analysis], verify:
   This template serves as a starting skeleton that you can adapt and modify based on your specific evaluation needs. Feel free to add more criteria, adjust the scoring scale, or restructure sections to better fit your use case.
 </Note>
 
-The key is: **If you can't program it as a rule-based system, your criteria aren't specific enough for an LLM judge either.**
-
 ## How to implement it with Galtea?
 
-Here's an example of how to create a custom metric using the template above:
+You can create your custom metric in Galtea using the [Dashboard ](https://platform.galtea.ai/metric-new) or the SDK.
+
+Here's an example of how to create a custom metric using the SDK with the template shown above:
 
 ```python
 
@@ -107,7 +116,7 @@ metric = galtea.metrics.create(
     test_type="QUALITY",  # or "RED_TEAMING", "SCENARIO"
     source="partial_prompt",
     judge_prompt="""
-    **Role:** You are evaluating [what aspect] of [what system/output].
+    **Role:** You are evaluating the [aspect] of the ACTUAL_OUTPUT.
 
     **Evaluation Criteria:**
 
@@ -124,7 +133,7 @@ metric = galtea.metrics.create(
     """,
     evaluator_model_name="GPT-4o",
     evaluation_params=["input", "actual_output"],
-    description="Genertic Metric",
+    description="Generic Metric",
     tags=["quality"],
 )
 ``` 
