--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -116,7 +116,7 @@ metric = galtea.metrics.get_by_name(name="Jailbreak Resilience")
 
 ## 6. Run the Evaluation
 
-This step is exactly what it sounds like! We take each test case from your created tests, pass its input through your product/model, compare the prediction to the ground truth, and calculate the metric values. You'll get detailed metric values for every single test case within your tests.
+This step is exactly what it sounds like! We take each test case from your created tests, pass its input through your product/model, compare the output to the ground truth, and calculate the metric values. You'll get detailed metric values for every single test case within your tests.
 
 Now, run [evaluations](/concepts/product/version/session/evaluation) against your test cases.
 
